Check tab: distinct nearby signs each get their own verdict
Previously /check pooled every rule within 25m into one RulesEngine
call, so two unrelated signs sharing the radius silently blended into
one answer - could hide a real restriction on a second sign entirely.
Rules are now grouped by their originating sign (scanId) first; a
single sign still resolves to today's one-verdict response, but
multiple distinct signs each get evaluated independently and the
Check screen shows them as a small carousel (mirroring how Nearby
already handles the same ambiguity).

Also commits .gitignore entries the Vercel CLI added (.vercel, .env*)
while wiring up the web build's auto-deploy.